started on mobile version of index file

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="gallery-styles.css">
     <title>Gallery</title>
 </head>
 <body>
@@ -12,10 +13,9 @@
             <a href="./../about/about.html">About</a> 
             <a href="./../gallery/gallery.html">Gallery</a> 
             <a href="./../blogs/blogs.html">My Blog</a> 
-            <a href="./../contact/contact.html">Contact Me</a>
+            <a href="./../contact/contact.html">Contact</a>
         </nav>
     </header>
-
     <h1>Gallery</h1>
 </body>
 </html>
