--- a/index.html
+++ b/index.html
@@ -3,19 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Home</title>
 </head>
 <body>
-    <header>
+    <header class= "grid-container">
+        <img class="logo" src="./images/tapered-logo.png" alt="logo">
         <nav>
             <a href="./../index.html">Home</a>
             <a href="./../about/about.html">About</a> 
             <a href="./../gallery/gallery.html">Gallery</a> 
             <a href="./../blogs/blogs.html">My Blog</a> 
-            <a href="./../contact/contact.html">Contact Me</a>
+            <a href="./../contact/contact.html">Contact</a>
         </nav>
     </header>
+    <main>
+        <section class="section-one">
+            <ul class="content-text">
+                <li class="all-caps">THE BEACON TO ALL MANKIND</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt.</li>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
+                <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+            </ul>
+            <button href="./../blogs/blogs.html">READ MORE</button>
+        </section>
 
-    <h1>Welcome</h1>
+    <div class="gallery-images">
+        <div class="image-one">
+            <a href="./../gallery/gallery.html">
+                <img src="./images/image1.jpg" alt="man taper hair cut">
+                <h3 class="all-caps">THE FATHER</h3>
+            </a>  
+        </div>
+        <div class="image-two">
+            <a href="./../gallery/gallery.html">
+                <img src="./images/image2.jpg" alt="man taper hair cut">
+                <h3 class="all-caps">THE ACTOR</h3>
+            </a>
+        </div>
+        <div class="image-three">
+            <a href="./../gallery/gallery.html">
+                <img src="./images/image3.jpg" alt="man taper hair cut">
+                <h3 class="all-caps">THE NERD</h3>
+            </a>    
+        </div>
+    </div>
+    </main>
+    <footer>
+        <small>&copy; Copyright 2058, Example Corporation</small>
+    </footer>
 </body>
 </html>
