--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <header class= "grid-container">
         <img class="logo" src="./images/tapered-logo.png" alt="logo">
-        <nav>
+        <div class="nav">
             <a href="./../index.html">Home</a>
             <a href="./../about/about.html">About</a> 
             <a href="./../gallery/gallery.html">Gallery</a> 
             <a href="./../blogs/blogs.html">My Blog</a> 
             <a href="./../contact/contact.html">Contact</a>
-        </nav>
+        </div>
     </header>
-    <main>
-        <section class="section-one">
+    <main class= "grid-container">
+        <div class="section-one">
             <ul class="content-text">
                 <li class="all-caps">THE BEACON TO ALL MANKIND</li>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt.</li>
@@ -26,31 +26,30 @@
                 <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
             </ul>
             <button href="./../blogs/blogs.html">READ MORE</button>
-        </section>
-
-    <div class="gallery-images">
-        <div class="image-one">
-            <a href="./../gallery/gallery.html">
-                <img src="./images/image1.jpg" alt="man taper hair cut">
+        </div>
+        <div class="grid-container section-two">
+            <div class="image-one">
+                <a href="./../gallery/gallery.html">
+                <!-- <img src="./images/main1.jpg" alt="man taper hair cut"> -->
                 <h3 class="all-caps">THE FATHER</h3>
-            </a>  
-        </div>
-        <div class="image-two">
-            <a href="./../gallery/gallery.html">
-                <img src="./images/image2.jpg" alt="man taper hair cut">
+                </a>  
+            </div>
+            <div class="image-two">
+                <a href="./../gallery/gallery.html">
+                <!-- <img src="./images/main2.jpg" alt="man taper hair cut"> -->
                 <h3 class="all-caps">THE ACTOR</h3>
-            </a>
-        </div>
-        <div class="image-three">
-            <a href="./../gallery/gallery.html">
-                <img src="./images/image3.jpg" alt="man taper hair cut">
+                </a>
+            </div>
+            <div class="image-three">
+                <a href="./../gallery/gallery.html">
+                <!-- <img src="./images/main3.jpg" alt="man taper hair cut"> -->
                 <h3 class="all-caps">THE NERD</h3>
-            </a>    
+                </a>    
+            </div>
         </div>
-    </div>
+        <footer class="footer">
+            <small>&copy; Copyright 2058, Example Corporation</small>
+        </footer>
     </main>
-    <footer>
-        <small>&copy; Copyright 2058, Example Corporation</small>
-    </footer>
 </body>
 </html>
