--- a/index.html
+++ b/index.html
@@ -1,55 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Home</title>
-</head>
-<body>
-    <header class= "grid-container">
-        <img class="logo" src="./images/tapered-logo.png" alt="logo">
+  </head>
+  <body>
+    <div class="grid-container">
+      <header>
+        <img class="logo" src="./images/tapered-logo.png" alt="logo" />
         <div class="nav">
-            <a href="./../index.html">Home</a>
-            <a href="./../about/about.html">About</a> 
-            <a href="./../gallery/gallery.html">Gallery</a> 
-            <a href="./../blogs/blogs.html">My Blog</a> 
-            <a href="./../contact/contact.html">Contact</a>
+          <a href="./../index.html">Home</a>
+          <a href="./../about/about.html">About</a>
+          <a href="./../gallery/gallery.html">Gallery</a>
+          <a href="./../blogs/blogs.html">My Blog</a>
+          <a href="./../contact/contact.html">Contact</a>
         </div>
-    </header>
-    <main class= "grid-container">
+      </header>
         <div class="section-one">
-            <ul class="content-text">
-                <li class="all-caps">THE BEACON TO ALL MANKIND</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt.</li>
-                <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
-                <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            </ul>
-            <button href="./../blogs/blogs.html">READ MORE</button>
+          <ul class="content-text">
+            <li class="all-caps">THE BEACON TO ALL MANKIND</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt.</li>
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
+            <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          </ul>
+          <button href="./../blogs/blogs.html">READ MORE</button>
         </div>
-        <div class="grid-container section-two">
-            <div class="image-one">
-                <a href="./../gallery/gallery.html">
-                <!-- <img src="./images/main1.jpg" alt="man taper hair cut"> -->
-                <h3 class="all-caps">THE FATHER</h3>
-                </a>  
-            </div>
-            <div class="image-two">
-                <a href="./../gallery/gallery.html">
-                <!-- <img src="./images/main2.jpg" alt="man taper hair cut"> -->
-                <h3 class="all-caps">THE ACTOR</h3>
-                </a>
-            </div>
-            <div class="image-three">
-                <a href="./../gallery/gallery.html">
-                <!-- <img src="./images/main3.jpg" alt="man taper hair cut"> -->
-                <h3 class="all-caps">THE NERD</h3>
-                </a>    
-            </div>
+        <div class="section-two">
+          <div class="image-one">
+            <a href="./../gallery/gallery.html">
+              <!-- <img src="./images/main1.jpg" alt="man taper hair cut"> -->
+              <h3 class="all-caps">THE FATHER</h3>
+            </a>
+          </div>
+          <div class="image-two">
+            <a href="./../gallery/gallery.html">
+              <!-- <img src="./images/main2.jpg" alt="man taper hair cut"> -->
+              <h3 class="all-caps">THE ACTOR</h3>
+            </a>
+          </div>
+          <div class="image-three">
+            <a href="./../gallery/gallery.html">
+              <!-- <img src="./images/main3.jpg" alt="man taper hair cut"> -->
+              <h3 class="all-caps">THE NERD</h3>
+            </a>
+          </div>
         </div>
         <footer class="footer">
-            <small>&copy; Copyright 2058, Example Corporation</small>
+          <small>&copy; Copyright 2058, Ariel Corporation</small>
         </footer>
-    </main>
-</body>
+    </div>
+  </body>
 </html>
