--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
     <title>Home</title>
   </head>
@@ -24,7 +25,7 @@
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt.</li>
             <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-          </ul>
+        </ul>
           <button href="./../blogs/blogs.html">READ MORE</button>
         </div>
         <div class="section-two">
