--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css" />
-    <title>Home</title>
+    <title>Tapered Barber Shop</title>
   </head>
   <body>
     <div class="grid-container">
@@ -19,38 +20,47 @@
           <a href="./../contact/contact.html">Contact</a>
         </div>
       </header>
-        <div class="section-one">
-          <ul class="content-text">
-            <li class="all-caps">THE BEACON TO ALL MANKIND</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt.</li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
-            <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+      <div class="section-one">
+        <ul class="content-text">
+          <li class="all-caps">THE BEACON TO ALL MANKIND</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt.</li>
+          <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
         </ul>
-          <button href="./../blogs/blogs.html">READ MORE</button>
-        </div>
-        <div class="section-two">
-          <div class="image-one">
+        <button href="./../blogs/blogs.html"><strong> READ MORE</strong></button>
+      </div>
+      <div class="section-two">
+        <div class="image-container">
+          <div class="column">
             <a href="./../gallery/gallery.html">
-              <!-- <img src="./images/main1.jpg" alt="man taper hair cut"> -->
-              <h3 class="all-caps">THE FATHER</h3>
+              <img class= "image-gallery" src="./images/main1.jpg" alt="man taper hair cut"> 
+              <h3 class="all-caps">TAPERS</h3>
             </a>
           </div>
-          <div class="image-two">
+          <div class="column">
             <a href="./../gallery/gallery.html">
-              <!-- <img src="./images/main2.jpg" alt="man taper hair cut"> -->
-              <h3 class="all-caps">THE ACTOR</h3>
+              <img class= "image-gallery" src="./images/main2.jpg" alt="man taper hair cut">
+              <h3 class="all-caps">FOR</h3>
             </a>
           </div>
-          <div class="image-three">
+          <div class="column">
             <a href="./../gallery/gallery.html">
-              <!-- <img src="./images/main3.jpg" alt="man taper hair cut"> -->
-              <h3 class="all-caps">THE NERD</h3>
+              <img class= "image-gallery" src="./images/main3.jpg" alt="man taper hair cut">
+              <h3 class="all-caps">ALL</h3>
             </a>
           </div>
-        </div>
-        <footer class="footer">
-          <small>&copy; Copyright 2058, Ariel Corporation</small>
-        </footer>
+        </div>   
+      </div>
+      <footer class="footer">
+        <div class="smLinks">
+          <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+          <a href="https://www.twitter.com/" class="fa fa-twitter"></a>
+          <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+          <a href="https://www.pinterest.com/" class="fa fa-pinterest"></a>
+          <a href="https://www.youtube.com/" class="fa fa-youtube"></a>
+        </div> <br>
+        <small><strong>&copy; Copyright 2020, Holman Corporation</strong></small>
+      </footer>
     </div>
   </body>
 </html>
