Added header and footer and grid to all pages.

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -3,19 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="gallery-styles.css">
-    <title>Gallery</title>
+    <title>About</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="./../index.html">Home</a>
-            <a href="./../about/about.html">About</a> 
-            <a href="./../gallery/gallery.html">Gallery</a> 
-            <a href="./../blogs/blogs.html">My Blog</a> 
-            <a href="./../contact/contact.html">Contact</a>
-        </nav>
-    </header>
-    <h1>Gallery</h1>
+    <div class="grid-container">
+        <header class="header">
+            <img class="logo" src="./../images/tapered-logo.png" alt="logo" />
+            <div class="nav">
+                <a href="./../index.html">Home</a>
+                <a href="./../about/about.html">About</a>
+                <a href="./../gallery/gallery.html">Gallery</a>
+                <a href="./../blogs/blogs.html">Blog</a>
+                <a href="./../contact/contact.html">Contact</a>
+            </div>
+        </header>
+        <div class="gallery">
+            <h1>GALLERY HERE</h1>
+        </div>
+        <footer class="footer">
+            <div class="smLinks">
+                <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+                <a href="https://www.twitter.com/" class="fa fa-twitter"></a>
+                <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+                <a href="https://www.pinterest.com/" class="fa fa-pinterest"></a>
+                <a href="https://www.youtube.com/" class="fa fa-youtube"></a>
+            </div> <br>
+            <small><strong>&copy; Copyright 2020, Holman Corporation</strong></small>
+        </footer>
+    </div>
 </body>
 </html>
