--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <a href="./../index.html">Home</a>
           <a href="./../about/about.html">About</a>
           <a href="./../gallery/gallery.html">Gallery</a>
-          <a href="./../blogs/blogs.html">My Blog</a>
+          <a href="./../blogs/blogs.html">Blog</a>
           <a href="./../contact/contact.html">Contact</a>
         </div>
       </header>
