added all images, updated all pages.

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="grid-container">
-        <header class="header">
+        <header class="header margins">
             <img class="logo" src="./../images/tapered-logo.png" alt="logo" />
             <div class="nav">
                 <a href="./../index.html">Home</a>
@@ -20,8 +20,16 @@
                 <a href="./../contact/contact.html">Contact</a>
             </div>
         </header>
-        <div class="contactForm">
-            <h1>CONTACT FORM HERE</h1>
+        <div class="contactForm margins">
+            <h1>SET AN APPOINTMENT TODAY!</h1>
+            <form class="form-style">
+                <input type="text" name="fname" id="fname" value="NAME">
+                <input type="text" name="address" id="address" value="ADRESS">
+                <input type="text" name="email" id="email" value="EMAIL">
+                <input type="text" name="phone" id="phone" value="PHONE NUMBER">
+                <textarea name="message" rows="6" id="message">MESSAGE</textarea><br>
+                <input type="submit" class="submit" name="send" id="send" value="SUBMIT">
+            </form>
         </div>
         <footer class="footer">
             <div class="smLinks">
