--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="grid-container">
-      <header>
+      <header class="margins">
         <img class="logo" src="./images/tapered-logo.png" alt="logo" />
         <div class="nav">
           <a href="./../index.html">Home</a>
@@ -29,7 +29,7 @@
         </ul>
         <button href="./../blogs/blogs.html"><strong> READ MORE</strong></button>
       </div>
-      <div class="section-two">
+      <div class="section-two margins">
         <div class="image-container">
           <div class="column">
             <a href="./../gallery/gallery.html">
