--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="grid-container">
-        <header class="header">
+        <header class="header margins">
             <img class="logo" src="./../images/tapered-logo.png" alt="logo" />
             <div class="nav">
                 <a href="./../index.html">Home</a>
@@ -20,8 +20,36 @@
                 <a href="./../contact/contact.html">Contact</a>
             </div>
         </header>
-        <div class="blog">
-            <h1>BLOG POSTS</h1>
+        <div class="blog1 margins ">
+            <img src="./../images/blog1.jpg" class="blog-img" width="450" height="300">
+            <div class="bloginfo">
+                <h3>WHY I BECAME A BARBER</h3>
+                <p>This website template has been designed by Free Website 
+                    Templates for you, for free. You can replace all this text with your own text.
+                </p>
+                <button a href="./../blogs/blogs.html">Read More</button>
+            </div>
+        </div>
+        <div class="blog2 margins">
+            <img src="./../images/blog2.jpg" class="blog-img" width="450" height="300">
+            <div class="bloginfo">
+                <h3>FOLLOWING YOUR DREAMS</h3>
+                <p>Want an easier solution for a Free Website? Head straight to Wix 
+                    and immediately start customizing your website!
+                </p>
+                <button a href="./../blogs/blogs.html">Read More</button>
+            </div>
+        </div>
+        <div class="blog3 margins">
+            <img src="./../images/blog3.jpg" class="blog-img" width="450" height="300">
+            <div class="bloginfo">
+                <h3>GROW WITH CARE, WEAR WITH PRIDE</h3>
+                <p>Wix is an online website builder with a simple drag & drop 
+                    interface, meaning you do the work online and instantly publish 
+                    to the web. Nothing to download, nothing to upload.
+                </p>
+                <button a href="./../blogs/blogs.html">Read More</button>
+            </div>
         </div>
         <footer class="footer">
             <div class="smLinks">
