--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="grid-container">
-        <header class="header">
+        <header class="header margins">
             <img class="logo" src="./../images/tapered-logo.png" alt="logo" />
             <div class="nav">
                 <a href="./../index.html">Home</a>
@@ -20,8 +20,38 @@
                 <a href="./../contact/contact.html">Contact</a>
             </div>
         </header>
-        <div class="gallery">
-            <h1>GALLERY HERE</h1>
+        <div class="image-container1 margins">
+            <div class="column">
+                <img src="./../images/main1.jpg" alt="black and white photo of a bearded man" class="border" height="400px" width="400px">
+            </div>
+            <div class="column">
+                <img src="./../images/gallery4.jpg" alt="black and white headshot of a man" class="border" height="400px" width="400px">
+            </div>
+            <div class="column">
+                <img src="./../images/gallery5.jpg" alt="artistic man" class="border" height="400px" width="400px">
+            </div>
+        </div>
+        <div class="image-container2 margins">
+            <div class="column">
+                <img src="./../images/gallery6.jpg" alt="black and white photo of a bearded man" class="border" height="400px" width="400px">
+            </div>
+            <div class="column">
+                <img src="./../images/main2.jpg" alt="black and white headshot of a man" class="border" height="400px" width="400px">
+            </div>
+            <div class="column">
+                <img src="./../images/gallery7.jpg" alt="artistic man" class="border" height="400px" width="400px">
+            </div>
+        </div>
+        <div class="image-container3 margins">
+            <div class="column">
+                <img src="./../images/gallery8.jpg" alt="black and white photo of a bearded man" class="border" height="400px" width="400px">
+            </div>
+            <div class="column">
+                <img src="./../images/gallery9.jpg" alt="black and white headshot of a man" class="border" height="400px" width="400px">
+            </div>
+            <div class="column">
+                <img src="./../images/main3.jpg" alt="artistic man" class="border" height="400px" width="400px">
+            </div>
         </div>
         <footer class="footer">
             <div class="smLinks">
