--- a/about/about.html
+++ b/about/about.html
@@ -67,13 +67,12 @@
         </div>
         <footer class="footer">
             <div class="smLinks">
-            <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
-            <a href="https://www.twitter.com/" class="fa fa-twitter"></a>
-            <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
-            <a href="https://www.pinterest.com/" class="fa fa-pinterest"></a>
-            <a href="https://www.youtube.com/" class="fa fa-youtube"></a>
-            </div>
-            <br />
+                <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+                <a href="https://www.twitter.com/" class="fa fa-twitter"></a>
+                <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+                <a href="https://www.pinterest.com/" class="fa fa-pinterest"></a>
+                <a href="https://www.youtube.com/" class="fa fa-youtube"></a>
+            </div> <br/>
             <small><strong>&copy; Copyright 2020, Holman Corporation</strong></small>
         </footer>
     </div>
