--- a/about/about.html
+++ b/about/about.html
@@ -6,18 +6,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="about-styles.css"/>
+    <link rel="stylesheet" href="../styles.css"/>
     <title>About</title>
   </head>
   <body>
     <div class="grid-container">
-        <header class="header margins">
-            <img class="logo" src="./../images/tapered-logo.png" alt="logo"/>
+        <header class="header">
+            <img class="logo" src="../images/tapered-logo.png" alt="logo" />
             <div class="nav">
-                <a href="./../index.html">Home</a>
-                <a href="./../about/about.html">About</a>
-                <a href="./../gallery/gallery.html">Gallery</a>
-                <a href="./../blogs/blogs.html">Blog</a>
-                <a href="./../contact/contact.html">Contact</a>
+              <a href="../home/home.html">Home</a>
+              <a href="../about/about.html">About</a>
+              <a href="../gallery/gallery.html">Gallery</a>
+              <a href="../blogs/blogs.html">Blog</a>
+              <a href="../contact/contact.html">Contact</a>
             </div>
         </header>
         <div class="image margins">
@@ -39,42 +40,42 @@
             <section>
                 <h3>We Have More Templates for You</h3>
                 <p>
-                Looking for more templates? Just browse through all our Free Website 
-                Templates and find what you’re looking for. But if you don’t find any 
-                website template you can use, you can try our Free Web Design service and 
-                tell us all about it. Maybe you’re looking for something different, something 
-                special. And we love the challenge of doing something different and something 
+                Looking for more templates? Just browse through all our Free Website
+                Templates and find what you’re looking for. But if you don’t find any
+                website template you can use, you can try our Free Web Design service and
+                tell us all about it. Maybe you’re looking for something different, something
+                special. And we love the challenge of doing something different and something
                 special.
                 </p>
             </section>
             <section>
                 <h3>Be Part of Our Community</h3>
                 <p>
-                If you’re experiencing issues and concerns about this website template, 
-                join the discussion on on our forum and meet other people in the community who 
+                If you’re experiencing issues and concerns about this website template,
+                join the discussion on on our forum and meet other people in the community who
                 share the same interests with you.
                 </p>
             </section>
             <section>
                 <h3>Template details</h3>
                 <p>
-                Design version 2. Code version 1. Website Template details, discussion and 
-                updates for this Mustache Enthusiast Website Template. Website Template design 
-                by Free Website Templates. Please feel free to remove some or all the text and 
+                Design version 2. Code version 1. Website Template details, discussion and
+                updates for this Mustache Enthusiast Website Template. Website Template design
+                by Free Website Templates. Please feel free to remove some or all the text and
                 links of this page and replace it with your own About content.
                 </p>
             </section>
         </div>
         <footer class="footer">
             <div class="smLinks">
-                <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
-                <a href="https://www.twitter.com/" class="fa fa-twitter"></a>
-                <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
-                <a href="https://www.pinterest.com/" class="fa fa-pinterest"></a>
-                <a href="https://www.youtube.com/" class="fa fa-youtube"></a>
-            </div> <br/>
-            <small><strong>&copy; Copyright 2020, Holman Corporation</strong></small>
-        </footer>
+              <a target="_blank" href="https://www.facebook.com/" class="fa fa-facebook"></a>
+              <a target="_blank" href="https://www.twitter.com/" class="fa fa-twitter"></a>
+              <a target="_blank" href="https://www.instagram.com/" class="fa fa-instagram"></a>
+              <a target="_blank" href="https://www.pinterest.com/" class="fa fa-pinterest"></a>
+              <a target="_blank" href="https://www.youtube.com/" class="fa fa-youtube"></a>
+            </div> <br>
+            <small><strong>&copy; Copyright 2020 Developed by Ariel Holman </strong></small>
+          </footer>
     </div>
   </body>
 </html>
