--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -6,61 +6,62 @@
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="blogs-styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title>About</title>
 </head>
 <body>
     <div class="grid-container">
-        <header class="header margins">
-            <img class="logo" src="./../images/tapered-logo.png" alt="logo" />
+        <header class="header">
+            <img class="logo" src="../images/tapered-logo.png" alt="logo" />
             <div class="nav">
-                <a href="./../index.html">Home</a>
-                <a href="./../about/about.html">About</a>
-                <a href="./../gallery/gallery.html">Gallery</a>
-                <a href="./../blogs/blogs.html">Blog</a>
-                <a href="./../contact/contact.html">Contact</a>
+              <a href="../home/home.html">Home</a>
+              <a href="../about/about.html">About</a>
+              <a href="../gallery/gallery.html">Gallery</a>
+              <a href="../blogs/blogs.html">Blog</a>
+              <a href="../contact/contact.html">Contact</a>
             </div>
         </header>
-        <div class="blog1 margins ">
+        <div class="blog1 margins">
             <img src="./../images/blog1.jpg" class="blog-img" width="450" height="300">
             <div class="bloginfo">
                 <h3>WHY I BECAME A BARBER</h3>
-                <p>This website template has been designed by Free Website 
+                <p>This website template has been designed by Free Website
                     Templates for you, for free. You can replace all this text with your own text.
                 </p>
-                <button a href="./../blogs/blogs.html">Read More</button>
+                <button class="blog-button"  href="./../blogs/blogs.html">Read More</button>
             </div>
         </div>
         <div class="blog2 margins">
             <img src="./../images/blog2.jpg" class="blog-img" width="450" height="300">
             <div class="bloginfo">
                 <h3>FOLLOWING YOUR DREAMS</h3>
-                <p>Want an easier solution for a Free Website? Head straight to Wix 
+                <p>Want an easier solution for a Free Website? Head straight to Wix
                     and immediately start customizing your website!
                 </p>
-                <button a href="./../blogs/blogs.html">Read More</button>
+                <button class="blog-button" href="./../blogs/blogs.html">Read More</button>
             </div>
         </div>
         <div class="blog3 margins">
             <img src="./../images/blog3.jpg" class="blog-img" width="450" height="300">
             <div class="bloginfo">
                 <h3>GROW WITH CARE, WEAR WITH PRIDE</h3>
-                <p>Wix is an online website builder with a simple drag & drop 
-                    interface, meaning you do the work online and instantly publish 
+                <p>Wix is an online website builder with a simple drag & drop
+                    interface, meaning you do the work online and instantly publish
                     to the web. Nothing to download, nothing to upload.
                 </p>
-                <button a href="./../blogs/blogs.html">Read More</button>
+                <button class="blog-button" href="./../blogs/blogs.html">Read More</button>
             </div>
         </div>
         <footer class="footer">
             <div class="smLinks">
-                <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
-                <a href="https://www.twitter.com/" class="fa fa-twitter"></a>
-                <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
-                <a href="https://www.pinterest.com/" class="fa fa-pinterest"></a>
-                <a href="https://www.youtube.com/" class="fa fa-youtube"></a>
+              <a target="_blank" href="https://www.facebook.com/" class="fa fa-facebook"></a>
+              <a target="_blank" href="https://www.twitter.com/" class="fa fa-twitter"></a>
+              <a target="_blank" href="https://www.instagram.com/" class="fa fa-instagram"></a>
+              <a target="_blank" href="https://www.pinterest.com/" class="fa fa-pinterest"></a>
+              <a target="_blank" href="https://www.youtube.com/" class="fa fa-youtube"></a>
             </div> <br>
-            <small><strong>&copy; Copyright 2020, Holman Corporation</strong></small>
-        </footer>
+            <small><strong>&copy; Copyright 2020 Developed by Ariel Holman </strong></small>
+          </footer>
     </div>
 </body>
 </html>
