--- a/contact/contact.html
+++ b/contact/contact.html
@@ -6,18 +6,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="contact-styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title>About</title>
 </head>
 <body>
     <div class="grid-container">
-        <header class="header margins">
-            <img class="logo" src="./../images/tapered-logo.png" alt="logo" />
+        <header class="header">
+            <img class="logo" src="../images/tapered-logo.png" alt="logo" />
             <div class="nav">
-                <a href="./../index.html">Home</a>
-                <a href="./../about/about.html">About</a>
-                <a href="./../gallery/gallery.html">Gallery</a>
-                <a href="./../blogs/blogs.html">Blog</a>
-                <a href="./../contact/contact.html">Contact</a>
+              <a href="../home/home.html">Home</a>
+              <a href="../about/about.html">About</a>
+              <a href="../gallery/gallery.html">Gallery</a>
+              <a href="../blogs/blogs.html">Blog</a>
+              <a href="../contact/contact.html">Contact</a>
             </div>
         </header>
         <div class="contactForm margins">
@@ -33,14 +34,14 @@
         </div>
         <footer class="footer">
             <div class="smLinks">
-                <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
-                <a href="https://www.twitter.com/" class="fa fa-twitter"></a>
-                <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
-                <a href="https://www.pinterest.com/" class="fa fa-pinterest"></a>
-                <a href="https://www.youtube.com/" class="fa fa-youtube"></a>
+              <a target="_blank" href="https://www.facebook.com/" class="fa fa-facebook"></a>
+              <a target="_blank" href="https://www.twitter.com/" class="fa fa-twitter"></a>
+              <a target="_blank" href="https://www.instagram.com/" class="fa fa-instagram"></a>
+              <a target="_blank" href="https://www.pinterest.com/" class="fa fa-pinterest"></a>
+              <a target="_blank" href="https://www.youtube.com/" class="fa fa-youtube"></a>
             </div> <br>
-            <small><strong>&copy; Copyright 2020, Holman Corporation</strong></small>
-        </footer>
+            <small><strong>&copy; Copyright 2020 Developed by Ariel Holman </strong></small>
+          </footer>
     </div>
 </body>
 </html>
