--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   <link rel="stylesheet" href="./styles.css" />
   <title>Tapered Barber Shop</title>
   <!--  FAVICON  -->
-  <link rel="shortcut icon" href="../images/Tapers.png" />
+  <link rel="shortcut icon" href="./images/Tapers.png" />
 </head>
 <body>
   <div class="grid-container">
     <header class="header">
-      <img class="logo" src="../images/tapered-logo.png" alt="logo" />
+      <img class="logo" src="./images/tapered-logo.png" alt="logo" />
       <div class="nav">
-        <a href="../home/home.html">Home</a>
-        <a href="../about/about.html">About</a>
-        <a href="../gallery/gallery.html">Gallery</a>
-        <a href="../blogs/blogs.html">Blog</a>
-        <a href="../contact/contact.html">Contact</a>
+        <a href="./index.html">Home</a>
+        <a href="./about/about.html">About</a>
+        <a href="./gallery/gallery.html">Gallery</a>
+        <a href="./blogs/blogs.html">Blog</a>
+        <a href="./contact/contact.html">Contact</a>
       </div>
     </header>
     <div class="home-section-one margins">
@@ -30,25 +30,25 @@
         <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
         <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
       </ul>
-      <button class="to-blog-page-button"><strong> <a href="../blogs/blogs.html">READ BLOGS </a></strong></button>
+      <button class="to-blog-page-button"><strong> <a href="./blogs/blogs.html">READ BLOGS </a></strong></button>
     </div>
     <div class="home-section-two margins">
       <div class="image-container">
         <div class="column">
-          <a href="../gallery/gallery.html">
-            <img class= "image-gallery" src="../images/main1.jpg" alt="man taper hair cut">
+          <a href="./gallery/gallery.html">
+            <img class= "image-gallery" src="./images/main1.jpg" alt="man taper hair cut">
           </a>
             <h3 class="all-caps">TAPERS</h3>
         </div>
         <div class="column">
-          <a href="../gallery/gallery.html">
-            <img class= "image-gallery" src="../images/main2.jpg" alt="man taper hair cut">
+          <a href="./gallery/gallery.html">
+            <img class= "image-gallery" src="./images/main2.jpg" alt="man taper hair cut">
           </a>
             <h3 class="all-caps">FOR</h3>
         </div>
         <div class="column">
-          <a href="../gallery/gallery.html">
-            <img class= "image-gallery" src="../images/main3.jpg" alt="man taper hair cut">
+          <a href="./gallery/gallery.html">
+            <img class= "image-gallery" src="./images/main3.jpg" alt="man taper hair cut">
           </a>
             <h3 class="all-caps">ALL</h3>
         </div>
