rerouted all index html routes. did last minute changes to CSS from viewing the hosted site.

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -14,7 +14,7 @@
         <header class="header">
             <img class="logo" src="../images/tapered-logo.png" alt="logo" />
             <div class="nav">
-              <a href="../home/home.html">Home</a>
+                <a href="../index.html">Home</a>
               <a href="../about/about.html">About</a>
               <a href="../gallery/gallery.html">Gallery</a>
               <a href="../blogs/blogs.html">Blog</a>
@@ -36,14 +36,14 @@
             <div class="bloginfo">
                 <h3>FOLLOWING YOUR DREAMS</h3>
                 <p>Want an easier solution for a Free Website? Head straight to Wix
-                    and immediately start customizing your website!
+                    and immediately start customizing your website! You won't regret it!
                 </p>
                 <button class="blog-button" href="./../blogs/blogs.html">Read More</button>
             </div>
         </div>
         <div class="blog3 margins">
             <img src="./../images/blog3.jpg" class="blog-img" width="450" height="300">
-            <div class="bloginfo">
+            <div class="bloginfo" >
                 <h3>GROW WITH CARE, WEAR WITH PRIDE</h3>
                 <p>Wix is an online website builder with a simple drag & drop
                     interface, meaning you do the work online and instantly publish
