--- a/about/about.html
+++ b/about/about.html
@@ -14,7 +14,7 @@
         <header class="header">
             <img class="logo" src="../images/tapered-logo.png" alt="logo" />
             <div class="nav">
-              <a href="../home/home.html">Home</a>
+              <a href="../index.html">Home</a>
               <a href="../about/about.html">About</a>
               <a href="../gallery/gallery.html">Gallery</a>
               <a href="../blogs/blogs.html">Blog</a>
@@ -22,7 +22,7 @@
             </div>
         </header>
         <div class="image margins">
-            <h1>HOW TAPERED GOT STARTED</h1>
+          <h1 class="margins">HOW TAPERED GOT STARTED</h1>
             <img class="about-image" src="./../images/about-image.jpg" alt="photo of the owner"/>
         </div>
         <div class="about margins">
