--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -14,7 +14,7 @@
         <header class="header">
             <img class="logo" src="../images/tapered-logo.png" alt="logo" />
             <div class="nav">
-              <a href="../home/home.html">Home</a>
+              <a href="../index.html">Home</a>
               <a href="../about/about.html">About</a>
               <a href="../gallery/gallery.html">Gallery</a>
               <a href="../blogs/blogs.html">Blog</a>
