last min updates from seeing hosted site.

--- a/about/about.html
+++ b/about/about.html
@@ -22,7 +22,7 @@
             </div>
         </header>
         <div class="image margins">
-          <h1 class="margins">HOW TAPERED GOT STARTED</h1>
+          <h1>HOW TAPERED GOT STARTED</h1>
             <img class="about-image" src="./../images/about-image.jpg" alt="photo of the owner"/>
         </div>
         <div class="about margins">
